--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-22.04
 
     permissions:
+      contents: write
       pull-requests: write
+      repository-projects: write
 
     steps:
       - name: Add 2024-2 label
