--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -11,9 +11,8 @@ jobs:
     runs-on: ubuntu-22.04
 
     permissions:
-      contents: write
+      checks: write
       pull-requests: write
-      repository-projects: write
 
     steps:
       - name: Add 2024-2 label
