--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -6,18 +6,11 @@ on:
       - opened
 
 jobs:
-  request:
-    name: Add "2024-2" label
-    runs-on: ubuntu-22.04
-
+  labeler:
     permissions:
-      checks: write
+      contents: read
       pull-requests: write
-
+    runs-on: ubuntu-latest
     steps:
-      - name: Add 2024-2 label
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          url: ${{ github.event.pull_request.html_url }}
-        run: |
-          gh pr edit "$url" --add-label "2024-2"
+    - uses: actions/checkout@v4
+    - uses: actions/labeler@v5
